src/tokenization/pegjs/generated/parser.ts
/* eslint-disable */
// @ts-nocheck
// noinspection UnnecessaryLocalVariableJS
const parser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Top: peg$parseTop },
        peg$startRuleFunction  = peg$parseTop,

        peg$c0 = function(body) {const items=Array.isArray(body)?body.map(i=>i&&i.kind?i:void 0).filter(i=>void 0!==i):body;return 1===items.length?items[0]:items;},
        peg$c1 = /^[\ts ]/,
        peg$c2 = peg$classExpectation(["\t", "s", " "], false, false),
        peg$c3 = /^[\n,]/,
        peg$c4 = peg$classExpectation(["\n", ","], false, false),
        peg$c5 = function(newline) {return newline;},
        peg$c6 = function(newlines) {return toSpwItem({kind:"space"});},
        peg$c7 = "=>",
        peg$c8 = peg$literalExpectation("=>", false),
        peg$c9 = function(head, transport, tail) {return toSpwItem({kind:"strand-tail",tail:tail,transport:transport});},
        peg$c10 = function(head, tail) {return toSpwItem({kind:"strand",head:head,tail:tail});},
        peg$c11 = function(head, anchor) {return anchor;},
        peg$c12 = function(head, tail) {return[head,...tail];},
        peg$c13 = function(phrase) {const p=phrase.reduce((r,e)=>[...r,...Array.isArray(e)?e:[e]],[]);return toSpwItem({kind:"phrase",key:p.map(r=>r.key).join(" "),body:p});},
        peg$c14 = /^[\-a-zA-Z \t']/,
        peg$c15 = peg$classExpectation(["-", ["a", "z"], ["A", "Z"], " ", "\t", "'"], false, false),
        peg$c16 = /^[ -!,#-\u26FF]/,
        peg$c17 = peg$classExpectation([[" ", "!"], ",", ["#", "\u26FF"]], false, false),
        peg$c18 = /^[a-zA-Z]/,
        peg$c19 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c20 = /^[a-zA-Z0-9]/,
        peg$c21 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
        peg$c22 = function(head, tail) {return[...head,...tail].join("");},
        peg$c23 = /^[\-a-zA-Z_0-9]/,
        peg$c24 = peg$classExpectation(["-", ["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
        peg$c25 = function(head, tail, tail_2) {return[...head,...tail,tail_2].join("");},
        peg$c26 = "&",
        peg$c27 = peg$literalExpectation("&", false),
        peg$c28 = function(anchor) {return toSpwItem({kind:"anchor",key:anchor});},
        peg$c29 = /^[']/,
        peg$c30 = peg$classExpectation(["'"], false, false),
        peg$c31 = /^[\n]/,
        peg$c32 = peg$classExpectation(["\n"], false, false),
        peg$c33 = /^["]/,
        peg$c34 = peg$classExpectation(["\""], false, false),
        peg$c35 = "\\",
        peg$c36 = peg$literalExpectation("\\", false),
        peg$c37 = function(string) {return toSpwItem({kind:"string",key:string});},
        peg$c38 = "#",
        peg$c39 = peg$literalExpectation("#", false),
        peg$c40 = "_",
        peg$c41 = peg$literalExpectation("_", false),
        peg$c42 = function(token, label) {undefined},
        peg$c43 = function() {return toSpwItem({kind:"channel",...components});},
        peg$c44 = "?",
        peg$c45 = peg$literalExpectation("?", false),
        peg$c46 = function() {return toSpwItem({kind:"evaluation",...components});},
        peg$c47 = "~",
        peg$c48 = peg$literalExpectation("~", false),
        peg$c49 = function() {return toSpwItem({kind:"invocation",...components});},
        peg$c50 = "!",
        peg$c51 = peg$literalExpectation("!", false),
        peg$c52 = function() {return toSpwItem({kind:"performance",...components});},
        peg$c53 = "@",
        peg$c54 = peg$literalExpectation("@", false),
        peg$c55 = function() {return toSpwItem({kind:"perspective",...components});},
        peg$c56 = "{",
        peg$c57 = peg$literalExpectation("{", false),
        peg$c58 = function(token, anchor, description) {return{anchor:anchor,description:description};},
        peg$c59 = function(token, node) {return null;},
        peg$c60 = function(token, node) {return toSpwItem({key:[token,node.anchor.key].join("_"),...node,kind:"delimiter"});},
        peg$c61 = function(tok) {return toSpwItem({key:tok,label:null,kind:"delimiter"});},
        peg$c62 = "}",
        peg$c63 = peg$literalExpectation("}", false),
        peg$c64 = function(node, token) {return toSpwItem({key:[token,node.key].join("_"),anchor:null,kind:"delimiter"});},
        peg$c65 = function() {return null;},
        peg$c66 = function(item) {return item;},
        peg$c67 = function(items) {return toSpwItem({kind:"node-body",key:items.map(e=>e&&e.key).filter(Boolean).join(", "),entries:items.filter(e=>null!=e)});},
        peg$c68 = function(open) {return null;},
        peg$c69 = function(open, underscore) {return underscore;},
        peg$c70 = function(open, close) {return{open:open,close:close};},
        peg$c71 = function(open, body, close) {return{open:open,body:body,close:close};},
        peg$c72 = function(container) {return toSpwItem({...container,key:[container.open.key+(container.open.anchor?" ":""),(container.body||{}).key||"#",container.close.key].join(""),kind:"domain"});},
        peg$c73 = "[",
        peg$c74 = peg$literalExpectation("[", false),
        peg$c75 = "]",
        peg$c76 = peg$literalExpectation("]", false),
        peg$c77 = function(container) {return toSpwItem({...container,key:[container.open.key+(container.open.anchor?" ":""),(container.body||{}).key||"#",container.close.key].join(""),kind:"essence"});},
        peg$c78 = "<",
        peg$c79 = peg$literalExpectation("<", false),
        peg$c80 = ">",
        peg$c81 = peg$literalExpectation(">", false),
        peg$c82 = function(container) {return toSpwItem({...container,key:[container.open.key+(container.open.anchor?" ":""),(container.body||{}).key||"#",container.close.key].join(""),kind:"concept"});},
        peg$c83 = "(",
        peg$c84 = peg$literalExpectation("(", false),
        peg$c85 = ")",
        peg$c86 = peg$literalExpectation(")", false),
        peg$c87 = function(container) {return toSpwItem({...container,key:[container.open.key+(container.open.anchor?" ":""),(container.body||{}).key||"#",container.close.key].join(""),kind:"group"});},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseTop() {
      var s0, s1, s2;

      var key    = peg$currPos * 30 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseStrandExpression();
      if (s2 === peg$FAILED) {
        s2 = peg$parseDomainNode();
        if (s2 === peg$FAILED) {
          s2 = peg$parseEssentialNode();
          if (s2 === peg$FAILED) {
            s2 = peg$parseConceptualNode();
            if (s2 === peg$FAILED) {
              s2 = peg$parseGroupNode();
              if (s2 === peg$FAILED) {
                s2 = peg$parsePureAtom();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseLabeledNode();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseLabeledNode();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parseSpace();
                    }
                  }
                }
              }
            }
          }
        }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseStrandExpression();
        if (s2 === peg$FAILED) {
          s2 = peg$parseDomainNode();
          if (s2 === peg$FAILED) {
            s2 = peg$parseEssentialNode();
            if (s2 === peg$FAILED) {
              s2 = peg$parseConceptualNode();
              if (s2 === peg$FAILED) {
                s2 = peg$parseGroupNode();
                if (s2 === peg$FAILED) {
                  s2 = peg$parsePureAtom();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseLabeledNode();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parseLabeledNode();
                      if (s2 === peg$FAILED) {
                        s2 = peg$parseSpace();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseSpace() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 30 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = [];
      s2 = [];
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s3 === peg$FAILED) {
        s3 = peg$currPos;
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s4 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c5(s4);
        }
        s3 = s4;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          if (peg$c1.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c2); }
          }
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            if (peg$c3.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c5(s4);
            }
            s3 = s4;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = [];
          if (peg$c1.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c2); }
          }
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            if (peg$c3.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c5(s4);
            }
            s3 = s4;
          }
          if (s3 !== peg$FAILED) {
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              if (peg$c1.test(input.charAt(peg$currPos))) {
                s3 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c2); }
              }
              if (s3 === peg$FAILED) {
                s3 = peg$currPos;
                if (peg$c3.test(input.charAt(peg$currPos))) {
                  s4 = input.charAt(peg$currPos);
                  peg$currPos++;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c4); }
                }
                if (s4 !== peg$FAILED) {
                  peg$savedPos = s3;
                  s4 = peg$c5(s4);
                }
                s3 = s4;
              }
            }
          } else {
            s2 = peg$FAILED;
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseStrandExpression() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      var key    = peg$currPos * 30 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parsePureAtom();
      if (s1 === peg$FAILED) {
        s1 = peg$parseLabeledNode();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseSpace();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseSpace();
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = [];
          s6 = peg$parseSpace();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parseSpace();
          }
          if (s5 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c7) {
              s6 = peg$c7;
              peg$currPos += 2;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s6 !== peg$FAILED) {
              s7 = [];
              s8 = peg$parseSpace();
              while (s8 !== peg$FAILED) {
                s7.push(s8);
                s8 = peg$parseSpace();
              }
              if (s7 !== peg$FAILED) {
                s8 = peg$parseStrandExpression();
                if (s8 === peg$FAILED) {
                  s8 = peg$parsePureAtom();
                }
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s4;
                  s5 = peg$c9(s1, s6, s8);
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$currPos;
              s5 = [];
              s6 = peg$parseSpace();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parseSpace();
              }
              if (s5 !== peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c7) {
                  s6 = peg$c7;
                  peg$currPos += 2;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c8); }
                }
                if (s6 !== peg$FAILED) {
                  s7 = [];
                  s8 = peg$parseSpace();
                  while (s8 !== peg$FAILED) {
                    s7.push(s8);
                    s8 = peg$parseSpace();
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseStrandExpression();
                    if (s8 === peg$FAILED) {
                      s8 = peg$parsePureAtom();
                    }
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s4;
                      s5 = peg$c9(s1, s6, s8);
                      s4 = s5;
                    } else {
                      peg$currPos = s4;
                      s4 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsePhrase() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 30 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
